tests/error/comptime_expr_errors/unsupported_implicit.py
from tests.util import compile_guppy


s = {1, 2, 3}


@compile_guppy
def foo() -> int:
    return s
