tests/error/comptime_expr_errors/unsupported_implicit.err
Error: Unsupported Python expression (at $FILE:9:11)
  | 
7 | @compile_guppy
8 | def foo() -> int:
9 |     return s
  |            ^ Expression of type `<class 'set'>` is not supported

Guppy compilation failed due to 1 previous error
